Quang/minisys/pod.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webapp-deployment
  namespace: nhq-pin
  labels:
    app: minisys
spec:
  replicas: 3
  selector:
    matchLabels:
      app: minisys
  template:
    metadata:
      labels:
        app: minisys
    spec:
      containers:
      - name: nginx
        image: nhqhub/nhq-project:web94a3ddcd
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: dockerhub-access

---

#apiVersion: v1
#kind: Service
#metadata:
#  name: minisys-service
#  namespace: nhq-pin
#  labels:
#    app: c1nd3r-app
#spec:
#  selector:
#    app: minisys
#  ports:
#  - port: 80
#    targetPort: 80


apiVersion: v1
kind: Service
metadata:
  namespace: nhq-pin
  name: minisys-service
  labels:
    app: c1nd3r-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: minisys
